# Leor

./: .gitignore  API.md  BLE_CONTROL_GUIDE.md  CMakeLists.txt  DESIGN.md  FluxGarage_RoboEyes.h  Leor.ino  MochiEyes.h  README.md  ble_manager.h  clock_manager.h  commands.h  commands.h.bak  config.h  display_manager.h  ei_gesture.h  gesture_trainer.h  impl.md  imu_manager.h  ota_manager.h  partitions.csv  pio.ino  pio.ino.backup  power_manager.h  sdkconfig  sdkconfig.defaults  shuffle_manager.h  web_ui.h  wifi_manager.h
.github/workflows/: deploy.yml
components/leor_core/: CMakeLists.txt
components/leor_core/include/leor/: application.hpp  ble_service.hpp  clock_service.hpp  command_router.hpp  config.hpp  display_backend.hpp  gesture_service.hpp  menu_service.hpp  mochi_eyes_engine.hpp  notification_overlay.hpp  ota_service.hpp  power_service.hpp  shuffle_service.hpp
components/leor_core/include/leor/icons/: icon_calendar.h  icon_clock.h  icon_discord.h  icon_email.h  icon_facebook.h  icon_facebook_messenger.h  icon_github.h  icon_instagram.h  icon_linkedin.h  icon_mochi.h  icon_notification.h  icon_notion.h  icon_phone.h  icon_reddit.h  icon_settings.h  icon_sleep.h  icon_spotify.h  icon_telegram.h  icon_tiktok.h  icon_twitter.h  icon_whatsapp.h  icon_youtube.h  icons.h
components/leor_core/src/: application.cpp  ble_service.cpp  clock_service.cpp  command_router.cpp  display_backend.cpp  gesture_service.cpp  menu_service.cpp  mochi_eyes_engine.cpp  mpu6050_ahrs_ng.cpp  notification_overlay.cpp  ota_service.cpp  power_service.cpp  shuffle_service.cpp
edge_impulse_dataforwarder/: edge_impulse_dataforwarder.ino
esp-idf/: .gitignore  sdkconfig  sdkconfig.defaults
esp-idf/components/leor_core/: CMakeLists.txt  idf_component.yml
esp-idf/components/leor_core/include/leor/: application.hpp  ble_service.hpp  command_router.hpp  display_backend.hpp  gesture_service.hpp  mochi_eyes_engine.hpp  mpu6050_ahrs_ng.hpp  ota_service.hpp  power_service.hpp  preferences.hpp
esp-idf/components/leor_core/src/: application.cpp  ble_service.cpp  clock_service.cpp  command_router.cpp  display_backend.cpp  gesture_service.cpp  mochi_eyes_engine.cpp  ota_service.cpp  power_service.cpp  preferences.cpp
esp-idf/main/: CMakeLists.txt  app_main.cpp
leora/: README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json
leora/src/: app.css
leora/src/lib/: ble-config.ts  ble.svelte.ts  ml.ts
leora/src/lib/components/: ActionButtons.svelte  AnimatedTabs.svelte  AppearanceSettings.svelte  BreathingControl.svelte  ClockSettings.svelte  ConnectionButton.svelte  DisplaySettings.svelte  DockIcon.svelte  DualRangeSlider.svelte  ExpressionGrid.svelte  FlickeringGrid.svelte  GestureManager.svelte  GestureSettings.svelte  Lights.svelte  LookPad.svelte  MasterBackground.svelte  MouthControls.svelte  OtaPanel.svelte  PowerSettings.svelte  ShimmerButton.svelte  ShufflePanel.svelte
leora/src/routes/: +page.svelte
leora/src/routes/settings/: +page.svelte
main/: app_main.cpp
mpu/: MPU6050_AHRS.cpp  MPU6050_AHRS.h  mpu.ino
tools/: convert_icons.py  test_notify.py
web/: README.md  package.json
web/src/: app.css
web/src/lib/: ble-config.ts  ble.svelte.ts  sim.py  sim2.py  sim3.py
web/src/lib/components/: ActionButtons.svelte  AppearanceSettings.svelte  BreathingControl.svelte  ClockSettings.svelte  ConnectionButton.svelte  DisplaySettings.svelte  Dock.svelte  DualRangeSlider.svelte  ExpressionGrid.svelte  GestureCalibration.svelte  LookPad.svelte  (+11 more)
web/src/routes/: +page.svelte
(+1 files in other folders)
